src/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
}

a {
  font-weight: 500;
  color: #333;
  text-decoration: inherit;
  display: inline-block;
}
.btn-link {
  color: #333;
  background-color: #fff;
  display: inline;
  padding: 8px;
  border-radius: 5px;
}
a:hover .btn-link {
  border: 0.5px solid #c7365f;
  background-color: rgba(255, 255, 255, 0.5);
  transition: 0.3s;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  min-height: 100vh;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

button {
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
}
button:hover {
  background-color: rgba(255, 255, 255, 0.4);
  border: 1px solid #c7365f;
  transition: 0.5s;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #c7365f;
  }
  button {
    background-color: #f9f9f9;
  }
}
@media (max-width: 43em) {
  .container {
    width: 25em;
    height: 40em;
    padding: 0 24px;
  }
  .heading {
    font-size: 2.5em;
    margin-top: 18px;
    margin-bottom: 16px;
  }
  .counter-change {
    gap: 0.7em;
  }
  .error-page {
    font-size: 2.5em;
  }
}

@media (max-width: 30em) {
  .container {
    width: 20em;
    height: 45em;
    padding: 0 24px;
  }
  .App {
    width: 22em;
    height: 47em;
    padding: 0 24px;
  }
  h1 {
    font-size: 3em;
  }
  p {
    font-size: 20px;
  }
  h2 {
    margin-bottom: 34px;
  }
  .counter-change {
    display: flex;
    flex-direction: column;
    gap: 1.5em;
  }
  .error-page {
    font-size: 3em;
  }
  .error-page-2 {
    font-size: 24px;
  }
}
@media (max-width: 28em) {
  .container {
    margin-top: -12px;
  }
  .counter-header {
    font-size: 2.5em;
  }
  .App {
    width: 18em;
    height: 43em;
    padding: 0 24px;
    gap: 2.5em;
  }
}

